# ey-ai-audit-compliance-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py  models.py  observability.py  schemas.py  seed.py  worker.py
backend/tests/: test_api.py  test_services.py
data/: README.md  purchase_orders.json  sample_structured_invoices.json  vendors.csv  vendors.json
data/demo_payloads/: invoice_workflow_request.json  workflow_invoice_1001.json
data/policies/: audit_evidence_policy.md  document_intelligence.md  fraud_and_duplicate_invoice.md  fraud_and_duplicate_invoice_policy.md  invoice_approval_policy.md  procurement_controls.md
data/sample_documents/: invoice_INV-2025-1042.txt
data/sample_invoices/: invoice_1001.txt  (+2 more)
deploy/: docker-compose.prod.yml  fly.toml  render.yaml
docs/: API.md  API_USAGE.md  ARCHITECTURE.md  DEPLOYMENT.md  GITHUB_UPLOAD_GUIDE.md  MODEL_CARD.md  OBSERVABILITY.md  RESUME_MAPPING.md  TECHNICAL_DEEP_DIVE.md
frontend/: Dockerfile  index.html  package.json  streamlit_app.py
monitoring/: prometheus.yml
observability/: prometheus.yml
postman/: EY_Audit_AI.postman_collection.json  ey_ai_audit_collection.json
scripts/: curl_demo.sh  generate_synthetic_invoices.py  run_demo.sh  walk_forward_validation.py
tests/: test_document_intelligence.py  test_fraud.py  test_model_validation.py  test_rag.py  test_reconciliation.py  test_workflow.py
workflows/: invoice_compliance.yaml
(+48 files in other folders)
