[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ey-audit-ai"
version = "0.1.0"
description = "AI enterprise audit and invoice compliance workflow platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Portfolio Project" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
